--- a/3.html
+++ b/3.html
@@ -28,13 +28,13 @@
                 <li class="active"><a href="#">Inicio</a></li>
                 <li><a href="#">Nosotros</a></li>
                 <li class="dropdown">
-                    <a data-toggle="dropdown" class="dropdown-toggle" href="#">Servicios <b class="caret"></b></a>
+                    <a data-toggle="dropdown" class="dropdown-toggle" href="#">Especialidades<b class="caret"></b></a>
                     <ul role="menu" class="dropdown-menu">
-                        <li><a href="#">Servicio 1</a></li>
-                        <li><a href="#">Servicio 2</a></li>
-                        <li><a href="#">Servicio 3</a></li>
+                        <li><a href="#">Especialidad 1</a></li>
+                        <li><a href="#">Especialidad 2</a></li>
+                        <li><a href="#">Especialidad 3</a></li>
                         <li class="divider"></li>
-                        <li><a href="#">Otros Servicios</a></li>
+                        <li><a href="#">Otras Especialidades</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
@@ -44,7 +44,7 @@
                         <li><a href="#">Especialistas</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Contacto</a></li>
+                <!--<li><a href="#">Contacto</a></li>-->
                 <li><a href="#">Blog</a></li>
             </ul>
 <!-- Para activar luego
@@ -58,43 +58,24 @@
             </ul>
 Para activar luego-->
             <div class="social navbar-right" >
-            <ul>
-                <li><a href="#"><i class="fa fa-lg fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa fa-lg fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa fa-lg fa-google-plus"></i></a></li>
-                <li><a href="#">Login</a></li>
-<!-- Activar Luego
-                <li><a href="#"><i class="fa fa-lg fa-github"></i></a></li>
-                <li><a href="#"><i class="fa fa-lg fa-pinterest"></i></a></li>
-                <li><a href="#"><i class="fa fa-lg fa-linkedin"></i></a></li>
-                <li><a href="#"><i class="fa fa-lg fa-flickr"></i></a></li>
-                <li><a href="#"><i class="fa fa-lg fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fa fa-lg fa-vimeo-square"></i></a></li>
-                <li><a href="#"><i class="fa fa-lg fa-stack-overflow"></i></a></li>
-                <li><a href="#"><i class="fa fa-lg fa-dropbox"></i></a></li>
-                <li><a href="#"><i class="fa fa-lg fa-tumblr"></i></a></li>
-                <li><a href="#"><i class="fa fa-lg fa-dribbble"></i></a></li>
-                <li><a href="#"><i class="fa fa-lg fa-skype"></i></a></li>
-                <li><a href="#"><i class="fa fa-lg fa-stack-exchange"></i></a></li>
-                <li><a href="#"><i class="fa fa-lg fa-youtube"></i></a></li>
-                <li><a href="#"><i class="fa fa-lg fa-xing"></i></a></li>
-                <li><a href="#"><i class="fa fa-lg fa-rss"></i></a></li>
-                <li><a href="#"><i class="fa fa-lg fa-foursquare"></i></a></li>
-                <li><a href="#"><i class="fa fa-lg fa-youtube-play"></i></a></li>
-Activar luego-->
-            </ul>
-</div>
+<ul class="list-inline">
+          <li><a href="https://www.facebook.com/universityofnewmexico" title="UNM on Facebook" class=""><span class="fa fa-facebook-square fa-2x">&nbsp;</span></a> </li>
+          <li><a href="https://twitter.com/unm" title="UNM on Twitter" class=""><span class="fa fa-twitter-square fa-2x">&nbsp;</span></a> </li>
+
+          <li><a href="http://www.youtube.com/user/unmlive" title="UNM on YouTube" class=""><span class="fa fa-youtube-square fa-2x">&nbsp;</span></a> </li>
+          <li><a href="/feed" title="The Pack RSS Feed" class=""><span class="fa fa-rss-square fa-2x">&nbsp;</span></a> </li>
+          <li><a href="#">Login</a></li>
+        </ul>
+            </div>
         </div>
     </nav>
     </div><!-- navbar -->
 
     <!--<div class="row" id="slideshow">-->
-
 <div class="container-fluid">
-
-
-  <div class="row">
-    <!-- Carousel -->
+  <div class="col-md-9">
+<!-- CAROSEL -->
+          <!-- Carousel -->
       <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
       <ol class="carousel-indicators">
@@ -105,7 +86,7 @@ Activar luego-->
       <!-- Wrapper for slides -->
       <div class="carousel-inner">
           <div class="item active">
-            <img src="http://placehold.it/1500x600/dddddd/000000/Slide-01" alt="First slide">
+            <img src="http://placehold.it/1500x600/285F90/000000/Slide-01" alt="First slide">
                     <!-- Static Header -->
                     <div class="header-text hidden-xs">
                         <div class="col-md-12 text-center">
@@ -118,12 +99,12 @@ Activar luego-->
                             </h3>
                             <br>
                             <div class="">
-                                <a class="btn btn-theme btn-sm btn-min-block" href="#">Login</a><a class="btn btn-theme btn-sm btn-min-block" href="#">Register</a></div>
+                                <a class="btn btn-theme btn-sm btn-min-block" href="#">Especialistas</a><a class="btn btn-theme btn-sm btn-min-block" href="#">Inscribirse</a></div>
                         </div>
                     </div><!-- /header-text -->
           </div>
           <div class="item">
-            <img src="http://placehold.it/1500x600/dddddd/000000/Slide-01" alt="Second slide">
+            <img src="http://placehold.it/1500x600/285F90/000000/Slide-01" alt="Second slide">
             <!-- Static Header -->
                     <div class="header-text hidden-xs">
                         <div class="col-md-12 text-center">
@@ -136,12 +117,12 @@ Activar luego-->
                             </h3>
                             <br>
                             <div class="">
-                                <a class="btn btn-theme btn-sm btn-min-block" href="#">Login</a><a class="btn btn-theme btn-sm btn-min-block" href="#">Register</a></div>
+                                <a class="btn btn-theme btn-sm btn-min-block" href="#">Especialistas</a><a class="btn btn-theme btn-sm btn-min-block" href="#">Inscribirse</a></div>
                         </div>
                     </div><!-- /header-text -->
           </div>
           <div class="item">
-            <img src="http://placehold.it/1500x600/dddddd/000000/Slide-01" alt="Third slide">
+            <img src="http://placehold.it/1500x600/285F90/000000/Slide-01" alt="Third slide">
             <!-- Static Header -->
                     <div class="header-text hidden-xs">
                         <div class="col-md-12 text-center">
@@ -154,7 +135,7 @@ Activar luego-->
                             </h3>
                             <br>
                             <div class="">
-                                <a class="btn btn-theme btn-sm btn-min-block" href="#">Login</a><a class="btn btn-theme btn-sm btn-min-block" href="#">Register</a></div>
+                                <a class="btn btn-theme btn-sm btn-min-block" href="#">Especialistas</a><a class="btn btn-theme btn-sm btn-min-block" href="#">Inscribirse</a></div>
                         </div>
                     </div><!-- /header-text -->
           </div>
@@ -167,12 +148,8 @@ Activar luego-->
           <span class="glyphicon glyphicon-chevron-right"></span>
       </a>
     </div><!-- /carousel -->
-
-
-
-    <!--</div> slider -->
-<br>
-    <div class="row">
+    <br>
+        <div class="row">
       <div class="block-1">
           <div class="col-sm-12 col-md-6">
             <div class="thumbnail">
@@ -197,96 +174,120 @@ Activar luego-->
 
       </div>
     </div><!-- block-1 -->
+  </div>
+  <div class="col-md-3 gdo-ads">
 
+      <h1 style="text-align: center;">Publicidad</h1>
 
+          <div class="thumbnail">
+          <img src="https://placehold.it/300x150" alt="Imagen 01">
+          <div class="caption">
+            <h3 class="text-center">Aviso Publicitario</h3>
+            <p class="text-center">Recibe el mejor Servicio</p>
 
+          </div>
+          </div>
+                    <div class="thumbnail">
+          <img src="https://placehold.it/300x150" alt="Imagen 01">
+          <div class="caption">
+            <h3 class="text-center">Aviso Publicitario</h3>
+            <p class="text-center">Recibe el mejor Servicio</p>
 
-    <div class="row">
-      <div class="container-fluid">
-      <div class="middle-heading">
-        <div class="well"><h1><strong>PASOS A SEGIR</strong></h1>
-        </div>
-      </div>
-      </div>
-    </div><!-- middle- heading -->
-    <div class="row">
-    <div class="hiw-container" id="hiw-container">
-  <h3>Como Funciona</h3>
-  <p>Puedes contratar al profesional que desees en solo 3 pasos</p>
-  <ul class="steps-list">
-    <li class="steps-card col-md-4">
-      <div class="col-xs-4 col-md-3">
-        <img src="assets/icons/submit_request.svg" alt="cotiza">
-      </div>
-      <div class="col-xs-8">
-        <h3>1. Envía un requerimiento</h3>
-          <p>La mejor forma de encontrar<br>al profesional correcto para ti</p>
-      </div>
-    </li>
-    <li class="steps-card col-md-4">
-      <div class="col-xs-4 col-md-3">
-        <img src="assets/icons/get_quotes.svg" alt="busca">
-      </div>
-      <div class="col-xs-8">
-        <h3>2. Obtén un presupuesto</h3>
-        <p>En pocas horas<br>te responderán con sus cotizaciones</p>
-      </div>
-    </li>
-    <li class="steps-card col-md-4">
-      <div class="col-xs-4 col-md-3">
-        <img src="assets/icons/hire_the_best.svg" alt="encuentra">
-      </div>
-      <div class="col-xs-8">
-        <h3>3. Contrata al mejor</h3>
-        <p>Mira su trabajo pasado<br>conversa y contrata al mejor.</p>
-      </div>
-    </li>
-  </ul>
-</div>
+          </div>
+          </div>
+                    <div class="thumbnail">
+          <img src="https://placehold.it/300x150" alt="Imagen 01">
+          <div class="caption">
+            <h3 class="text-center">Aviso Publicitario</h3>
+            <p class="text-center">Recibe el mejor Servicio</p>
+
+          </div>
+          </div><!-- beguin of ads -->
+  </div><!-- end of ads -->
 </div>
 
-    <div class="row">
-      <div class="bottom-columns">
-        <div class="bottom-column-1">
-
+ <!-- Page Heading -->
+        <div class="row">
+            <div class="col-lg-12 well">
+                <h1 class="page-header">ESPECIALIDADES DESTACADAS</h1>
+            </div>
         </div>
-        <div class="bottom-column-2">
+        <!-- /.row -->
 
+        <!-- Projects Row -->
+        <div class="row">
+            <div class="col-md-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="http://placehold.it/300x300" alt="">
+                </a>
+            </div>
+            <div class="col-md-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="http://placehold.it/300x300" alt="">
+                </a>
+            </div>
+            <div class="col-md-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="http://placehold.it/300x300" alt="">
+                </a>
+            </div>
+            <div class="col-md-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="http://placehold.it/300x300" alt="">
+                </a>
+            </div>
         </div>
-        <div class="bottom-column-3">
+        <!-- /.row -->
 
+        <!-- Projects Row -->
+        <div class="row">
+            <div class="col-md-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="http://placehold.it/300x300" alt="">
+                </a>
+            </div>
+            <div class="col-md-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="http://placehold.it/300x300" alt="">
+                </a>
+            </div>
+            <div class="col-md-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="http://placehold.it/300x300" alt="">
+                </a>
+            </div>
+            <div class="col-md-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="http://placehold.it/300x300" alt="">
+                </a>
+            </div>
         </div>
-      </div><!-- bottom -->
-    </div>
+        <!-- /.row -->
 
-    <div class="row">
-      <div class="social-icons">
 
-      </div>
-    </div><!-- sicial icons -->
-
-    <div class="row">
-      <div class="footer">
+  <div class="footer"><!-- Footer blocks -->
         <div class="col-xs-6 col-md-3 footer-01">
-          <h3><a href="#">Nosotros</a></h3>
+          <h3><a href="#">Especialidades</a></h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium et possimus soluta maxime nemo enim consequuntur asperiores earum excepturi odit ullam eaque doloribus quisquam perferendis architecto, repellendus minus maiores animi.</p>
         </div>
         <div class="col-xs-6 col-md-3 footer-02">
-          <h3><a href="#">Contacto</a></h3>
+          <h3><a href="#">Especialistas</a></h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique aperiam nobis qui. Aliquam soluta sed praesentium, aliquid mollitia. Rerum porro necessitatibus accusantium obcaecati error earum reiciendis aperiam explicabo, vero quam.</p>
         </div>
         <div class="col-xs-6 col-md-3 footer-03">
-          <h3><a href="#">Blog</a></h3>
+          <h3><a href="#">Comentarios</a></h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora commodi, facilis recusandae explicabo nisi laboriosam voluptas corrupti illo eos aspernatur nesciunt quasi consectetur perferendis, modi dolorem suscipit distinctio dolorum dolore.</p>
         </div>
         <div class="col-xs-6 col-md-3 footer-04">
-          <h3><a href="#">Forum</a></h3>
+          <h3><a href="#">Inscribirse</a></h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quisquam velit aspernatur explicabo mollitia suscipit natus, voluptates. Perspiciatis pariatur accusamus, voluptatibus possimus, corrupti quidem nulla deleniti iste, quia ratione natus.</p>
         </div>
-      </div>
-    </div><!-- footer -->
+</div><!--end of footer blocks -->
 
-    <div class="row">
+
+</div><!--</div>-->
+<br>
+<div class="row">
       <div class="copyright">
         <li>Powered by <a href="http://getbootstrap.com/">Bootstrap</a></li>
         <li>Copyright 2015 <a href="http://gentedeoficio.com/">Gente de Oficio</a></li>
@@ -294,12 +295,29 @@ Activar luego-->
           <li>Links: <a href="#">Nosotros</a></li>
           <li><a href="#">Contacto</a></li>
           <li><a href="#">Blog</a></li>
-
+          <li>
+            <ul class="list-inline">
+          <li><a href="https://www.facebook.com/universityofnewmexico" title="UNM on Facebook" class=""><span class="fa fa-facebook-square fa-2x">&nbsp;</span></a> </li>
+          <li><a href="https://twitter.com/unm" title="UNM on Twitter" class=""><span class="fa fa-twitter-square fa-2x">&nbsp;</span></a> </li>
+          <li><a href="http://uofnm.tumblr.com" title="UNM on Tumblr" class=""><span class="fa fa-tumblr-square fa-2x">&nbsp;</span></a> </li>
+          <li><a href="http://www.youtube.com/user/unmlive" title="UNM on YouTube" class=""><span class="fa fa-youtube-square fa-2x">&nbsp;</span></a> </li>
+          <li><a href="/feed" title="The Pack RSS Feed" class=""><span class="fa fa-rss-square fa-2x">&nbsp;</span></a> </li>
         </ul>
+        <p class="">busca mas en <a href="http://gentedeoficio.com.pa" title="Gente de Oficio &amp; Information" class="">gentedeoficio.com.pa</a> </p>
+          </li>
+        </ul>
+<hr>
+            <div class="col-md-6 text-right">
+
+
+
+
+
+           </div>
       </div>
+
     </div>
 
-  <!--</div>-->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 <script src="js/scripts.js"></script>
